2011-06-09  Francis Galiegue <fgaliegue@gmail.com>
	* recover-src/extract_list.c: read_amidxtaped_data(): replace
	  vstrextend() with g_strdup_printf()

2011-06-07  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c: Do not check optarg, we know it is not null
	* common-src/conffile.c: Do not check key_ovr, we know it is not null

2011-06-06  Satya Ganga <gsat@zmanda.com>
	* perl/Amanda/Application/Zfs.pm: Use correct device name, we have to
	use user provided Disk device name.

2011-06-06  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/rundump.c: Fix cast of g_ptr_array_free to (gchar **).

2011-06-04  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/util.c: remove usage of vstrextend() by using a GString. No
	  choice here, we have to peek into the GPtrArray.

2011-06-04  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/tapelist.c: remove usages of vstrextend() with a
	  GPtrArray/GString combination

2011-06-04  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/pipespawn.c: remove usage of vstrextend() with a GPtrArray

2011-06-04  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/fileheader.c: remove usage of vstrextend() with a GPtrArray

2011-06-04  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/conffile.c: replace the third and final usage of vstrextend()
	  in exinclude_display_str()

2011-06-04  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/conffile.c: replace the second usage of vstrextend() in
	  proplist_display_str_foreach_fn() using a GPtrArray

2011-06-04  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/conffile.c: replace one usage of vstrextend() in
	  val_t_display_strs() with a GString

2011-06-04  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/amservice.c: use a GString in replacement of vstrextend()

2011-06-04  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/planner.c: use a GPtrArray to collect client estimate
	  strings
